--- a/app/src/main/res/layout/fragment_IMAGE.xml
+++ b/app/src/main/res/layout/fragment_IMAGE.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.acv.gallery.ui.activity.MainActivity">
+    tools:context="com.acv.gallery.view.activity.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"/>
+        android:layout_height="match_parent"/>
 
     <android.support.v4.widget.ContentLoadingProgressBar
         android:id="@+id/cLProgressBar"
