--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.acv.gallery.ui.activity.MainActivity">
+    tools:context="com.acv.gallery.view.activity.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recylerView"
