--- a/app/src/main/res/layout/fragment_IMAGE.xml
+++ b/app/src/main/res/layout/fragment_IMAGE.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/layout_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +10,8 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"/>
 
     <android.support.v4.widget.ContentLoadingProgressBar
         android:id="@+id/cLProgressBar"
