--- a/app/src/main/res/menu/gallery.xml
+++ b/app/src/main/res/menu/gallery.xml
@@ -2,24 +2,52 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_order"
-        android:orderInCategory="101"
-        android:title="@string/action_order"
-        android:icon="@drawable/ic_reorder_white_24dp"
-        app:showAsAction="ifRoom|withText">
+    <group
+        android:id="@+id/action_group_simple"
+        android:orderInCategory="100">
+        <item
+            android:id="@+id/action_delete"
+            android:icon="@drawable/ic_delete_white_24dp"
+            android:orderInCategory="100"
+            android:title="@string/action_delete"
+            app:showAsAction="ifRoom|withText"/>
+        <item
+            android:id="@+id/action_search"
+            android:icon="@drawable/ic_search_white_24dp"
+            android:orderInCategory="102"
+            android:title="@string/action_search"
+            app:showAsAction="ifRoom|withText"/>
 
-        <menu>
-            <group android:id="@+id/group_order"
-                   android:checkableBehavior="single">
-            </group>
-        </menu>
-    </item>
+        <item
+            android:id="@+id/action_order"
+            android:icon="@drawable/ic_reorder_white_24dp"
+            android:orderInCategory="102"
+            android:title="@string/action_order"
+            app:showAsAction="ifRoom|withText">
 
-    <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_white_24dp"
-        android:title="@string/action_search"
-        app:showAsAction="ifRoom|withText"
-        android:orderInCategory="100"/>
+            <menu>
+                <group
+                    android:id="@+id/group_order"
+                    android:checkableBehavior="single">
+                </group>
+            </menu>
+        </item>
+    </group>
+
+    <group android:id="@+id/action_group_multi"
+           android:orderInCategory="200"
+           android:visible="false">
+        <item
+            android:id="@+id/action_accept"
+            android:icon="@drawable/ic_check_white_24dp"
+            android:orderInCategory="201"
+            android:title="@string/action_accept"
+            app:showAsAction="ifRoom|withText"/>
+        <item
+            android:id="@+id/action_cancel"
+            android:icon="@drawable/ic_close_white_24dp"
+            android:orderInCategory="202"
+            android:title="@string/action_cancel"
+            app:showAsAction="ifRoom|withText"/>
+    </group>
 </menu>
